--- a/babel.cfg
+++ b/babel.cfg
@@ -1,3 +1,3 @@
-[python: flask_user/**.py]
-[jinja2: flask_user/templates/**.html]
+[python: flask_auth/**.py]
+[jinja2: flask_auth/templates/**.html]
 extensions=jinja2.ext.autoescape,jinja2.ext.with_
